# vocab-english-fable

./: .env.example  .env.prod.example  .gitignore  CLAUDE.md  SPEC.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.tls.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/apps/accounts/: admin.py  exceptions.py  factories.py  models.py  serializers.py  services.py  urls.py  validators.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_alter_user_options_user_avatar_url_user_created_at_and_more.py
backend/apps/accounts/tests/: test_auth_api.py  test_models.py  test_services.py  test_settings_api.py
backend/apps/common/: exceptions.py  models.py  pagination.py  urls.py  views.py
backend/apps/common/tests/: test_health.py
backend/apps/enrichment/: budget.py  services.py  tasks.py
backend/apps/enrichment/providers/: __init__.py  base.py  factory.py  fake.py  gemini.py  schema.py
backend/apps/enrichment/tests/: test_budget.py  test_enrichment_flow.py  test_providers.py
backend/apps/srs/: admin.py  engine.py  factories.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
backend/apps/srs/migrations/: 0001_initial.py  (+1 more)
backend/apps/stats/: selectors.py  serializers.py  urls.py  views.py
backend/apps/vocab/: admin.py  exceptions.py  factories.py  models.py  normalization.py  selectors.py  serializers.py  services.py  urls.py  views.py
backend/config/: __init__.py  celery.py  env.py  urls.py
backend/config/settings/: base.py  dev.py  prod.py  test.py
docs/: ops-map.md  (+3 more)
(+107 files in other folders)
