[project]
name = "vocab-backend"
version = "0.1.0"
description = "Vocab English backend — Django + DRF"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<6.0",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "google-auth[requests]>=2.55.1",
    "google-genai>=2.10.0",
    "psycopg[binary]>=3.2",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "factory-boy>=3.3.3",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["**/migrations/*"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "DJ"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
pythonpath = ["."]
testpaths = ["apps"]
addopts = "--cov=apps --cov-report=term-missing"

[tool.coverage.run]
source = ["apps"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
fail_under = 70
